[package]
name = "rdtsc_native"
version = "0.1.0"
authors = ["Joe <burtonjae@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.19.0"
once_cell = "1.8"
quanta = "0.8.0"

[profile.release]
panic = "abort"